--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.19",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
@@ -23,6 +25,8 @@
     "tailwindcss": "3.4.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79"
   }
